# imap

./: CMakeLists.txt  README.md
command/: CMakeLists.txt  command.cc  command.h  command_printer.cc  command_printer.h  entry.cc  helloDemo.exe.manifest
imap/: CMakeLists.txt  command_builder.cc  commands.cc  connection.cc  default_command_builder.cc  imap.h
imaplib/: CMakeLists.txt  connection.cc  imap.cc
include/: CMakeLists.txt
include/imap/: command_builder.h  commands.h  connection.h  default_command_builder.h  fwd.h  include_pplx.h
tests/: CMakeLists.txt  mock_server.cc  mock_server.h  test_connection.cc
